src/notes.css
body {
    overflow-y: scroll;
}

.note-app {
    margin-left: auto;
    margin-right: auto;
    width: 500px;
}

.note-app > h1 {
    text-align: center;
}

.note-list {
    list-style: none;
    padding: 0;
}

.note-item {
    padding: 10px;
    border: solid 1px black;
    margin-top: 10px;
    min-height: 19px;
}

.note-item:nth-child(odd) {
    background: #eeeeee;
}

.note-item:nth-child(even) {
    background: #cccccc;
}

.note-input,
.note-title-edit {
    width: 445px;
}

.note-create-button,
.note-delete-button,
.note-datetime-text {
    float: right;
}

.note-delete-button,
.note-title-edit,
.note-content-edit,
.note-content-text:empty,
.note-item:hover > .note-title-text,
.note-item:hover > .note-datetime-text,
.note-item:hover > .note-content-text {
    display: none;
}

.note-title-text,
.note-title-edit {
    font-weight: bold;
}

.note-datetime-text {
    font-style: italic;
}

.note-content-text {
    display: block;
    overflow-wrap: break-word;
    overflow-y: hidden;
}

.note-item:hover > .note-delete-button,
.note-item:hover > .note-title-edit,
.note-item:hover > .note-content-edit {
    display: inline-block;
}

.note-content-text,
.note-content-edit {
    margin-top: 10px;
    width: 470px;
    height: 100px;
    resize: none;
}

